--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,15 @@
         android:layout_marginTop="-50dp"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/sunny" />
+
     <EditText
         android:id="@+id/edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/my_view"
         android:inputType="number"
-        android:text="400"
-        android:textSize="20sp"/>
+        android:text="500"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn"
@@ -37,8 +38,8 @@
         android:layout_alignRight="@id/edit"
         android:layout_below="@id/my_view"
         android:layout_marginRight="-4dp"
+        android:onClick="onClick"
         android:text="确定" />
-
 
 
 </RelativeLayout>
