--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,16 @@
         android:layout_below="@id/my_view"
         android:layout_marginRight="-4dp"
         android:onClick="onClick"
-        android:text="确定" />
+        android:text="开始检测" />
+
+    <Button
+        android:id="@+id/button_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="71dp"
+        android:text="停止检测" />
 
 
 </RelativeLayout>
